[gd_scene load_steps=23 format=2]

[ext_resource path="res://DockShow.gd" type="Script" id=1]
[ext_resource path="res://textures/Dock & Menu/pixel_browser.png" type="Texture" id=2]
[ext_resource path="res://textures/Dock & Menu/mypc.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Opening Scripts/Button.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Opening Scripts/openBrowser.gd" type="Script" id=5]
[ext_resource path="res://textures/Dock & Menu/pixel_presenter.png" type="Texture" id=6]
[ext_resource path="res://textures/Dock & Menu/pixel_office.png" type="Texture" id=7]
[ext_resource path="res://textures/Dock & Menu/pixel_spreadsheets.png" type="Texture" id=8]
[ext_resource path="res://textures/Dock & Menu/pixel_writer.png" type="Texture" id=9]
[ext_resource path="res://textures/Dock & Menu/pixel_store.png" type="Texture" id=10]
[ext_resource path="res://textures/Dock & Menu/settings.png" type="Texture" id=11]
[ext_resource path="res://textures/Dock & Menu/terminal.png" type="Texture" id=12]
[ext_resource path="res://textures/Dock & Menu/music.png" type="Texture" id=13]
[ext_resource path="res://UI.tres" type="Theme" id=14]
[ext_resource path="res://Scripts/Opening Scripts/openSettings.gd" type="Script" id=15]
[ext_resource path="res://OpenStore.gd" type="Script" id=16]
[ext_resource path="res://Scripts/Opening Scripts/openError.gd" type="Script" id=17]
[ext_resource path="res://Scripts/Opening Scripts/openWriter.gd" type="Script" id=18]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.580392, 0.580392, 0.580392, 0.533333 )
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.34902, 0.34902, 0.34902, 1 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
shadow_size = 3

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.215686, 0.215686, 0.215686, 1 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
shadow_size = 3

[sub_resource type="Theme" id=3]
VScrollBar/styles/grabber = SubResource( 2 )
VScrollBar/styles/grabber_pressed = SubResource( 4 )

[node name="Dock" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PopupPanel" type="Panel" parent="."]
anchor_left = 0.006
anchor_top = 0.132
anchor_right = 0.006
anchor_bottom = 0.132
margin_left = 1.856
margin_top = -30.2
margin_right = 82.856
margin_bottom = 621.8
theme = ExtResource( 14 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="PopupPanel"]
anchor_left = 0.011
anchor_top = 0.13
anchor_right = 0.011
anchor_bottom = 0.13
margin_left = 9.109
margin_top = -73.46
margin_right = 102.109
margin_bottom = 559.54
theme = SubResource( 3 )

[node name="Applications" type="VBoxContainer" parent="PopupPanel/ScrollContainer"]
margin_right = 60.0
margin_bottom = 631.0
theme = ExtResource( 14 )

[node name="Button" type="Button" parent="PopupPanel/ScrollContainer/Applications"]
margin_right = 60.0
margin_bottom = 60.0
icon = ExtResource( 3 )
flat = true
script = ExtResource( 4 )

[node name="Button2" type="Button" parent="PopupPanel/ScrollContainer/Applications"]
margin_top = 64.0
margin_right = 60.0
margin_bottom = 124.0
icon = ExtResource( 2 )
flat = true
script = ExtResource( 5 )

[node name="Button3" type="Button" parent="PopupPanel/ScrollContainer/Applications"]
margin_top = 128.0
margin_right = 60.0
margin_bottom = 187.0
icon = ExtResource( 7 )
flat = true
script = ExtResource( 17 )

[node name="Button4" type="Button" parent="PopupPanel/ScrollContainer/Applications"]
margin_top = 191.0
margin_right = 60.0
margin_bottom = 250.0
icon = ExtResource( 6 )
flat = true
script = ExtResource( 17 )

[node name="Button5" type="Button" parent="PopupPanel/ScrollContainer/Applications"]
margin_top = 254.0
margin_right = 60.0
margin_bottom = 313.0
icon = ExtResource( 8 )
flat = true
script = ExtResource( 17 )

[node name="Button6" type="Button" parent="PopupPanel/ScrollContainer/Applications"]
margin_top = 317.0
margin_right = 60.0
margin_bottom = 376.0
icon = ExtResource( 9 )
flat = true
script = ExtResource( 18 )

[node name="Button7" type="Button" parent="PopupPanel/ScrollContainer/Applications"]
margin_top = 380.0
margin_right = 60.0
margin_bottom = 440.0
icon = ExtResource( 10 )
flat = true
script = ExtResource( 16 )

[node name="Button8" type="Button" parent="PopupPanel/ScrollContainer/Applications"]
margin_top = 444.0
margin_right = 60.0
margin_bottom = 504.0
icon = ExtResource( 11 )
flat = true
script = ExtResource( 15 )

[node name="Button9" type="Button" parent="PopupPanel/ScrollContainer/Applications"]
margin_top = 508.0
margin_right = 60.0
margin_bottom = 568.0
icon = ExtResource( 13 )
flat = true
script = ExtResource( 17 )

[node name="Button10" type="Button" parent="PopupPanel/ScrollContainer/Applications"]
margin_top = 572.0
margin_right = 60.0
margin_bottom = 631.0
icon = ExtResource( 12 )
flat = true
script = ExtResource( 17 )
